[gd_scene load_steps=3 format=2]

[ext_resource path="res://entities/explosion/_explosion.gd" type="Script" id=1]
[ext_resource path="res://entities/explosion/damage_hurtbox.gd" type="Script" id=2]

[node name="Explosion" type="Node2D" groups=[
"explosion",
"trigger",
]]
script = ExtResource( 1 )

[node name="DamageHurtbox" type="Area2D" parent="." groups=[
"explosion",
"trigger",
]]
collision_layer = 8
collision_mask = 8
script = ExtResource( 2 )

[node name="Graphics" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="main" type="Sprite" parent="Graphics"]
__meta__ = {
"_edit_lock_": true
}

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
[connection signal="ready" from="." to="AnimationPlayer" method="play" binds= [ "explode" ]]
[connection signal="timeout" from="FadeTimer" to="." method="_on_FadeTimer_timeout"]
